--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: #0;
+              background: #000000;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
@@ -28,6 +28,7 @@
                       margin: 0px;
                       padding: 0px;
                       border: 0px;
+                      text-align: center;
             }
             :-webkit-full-screen #canvas {
                  width: 100%;
@@ -38,6 +39,7 @@
               margin: 0px;
               padding: 0px;
               border: 0px;
+              text-align: center;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
