synced git with local

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: #000000;
+              background: #0;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
@@ -28,7 +28,6 @@
                       margin: 0px;
                       padding: 0px;
                       border: 0px;
-                      text-align: center;
             }
             :-webkit-full-screen #canvas {
                  width: 100%;
@@ -39,7 +38,6 @@
               margin: 0px;
               padding: 0px;
               border: 0px;
-              text-align: center;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
@@ -81,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/farmgame.js?UXPZB=1209491940"></script>
+        <script type="text/javascript" src="html5game/farmgame.js?MYNAC=746817056"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
