--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: #0;
+              background: #000000;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
               border: 0px;
+              text-align: center;
             }
             canvas {
                       image-rendering: optimizeSpeed;
