--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/farmproto.js?IFDBC=848594050"></script>
+        <script type="text/javascript" src="html5game/farmredo.js?QTOAC=842566897"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
